--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^4.5.0",
     "ng-simple-slideshow": "^1.2.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
